<resources>
    <string name="app_name">A3-Kotlin-Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_mail_empty">Empty email</string>
    <string name="button_placeholder">Login</string>
    <string name="agree_with_terms">Agree with terms</string>
    <string name="password_placeholder">password</string>
    <string name="email_placeholder">email</string>
    <string name="error_password_empty">password can\'t be empty</string>
    <string name="error_checkbox">You have to agree with our terms</string>
    <string name="error_email_regex">Please set a valid email address</string>
    <string name="welcome">Hello %s</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="send_location">Send location</string>
    <string name="location">location</string>
</resources>