<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/welcome" />

    <EditText
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/location"/>

    <Button
        android:id="@+id/send_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_location"/>

</LinearLayout>